Cherry-picked commit ac2e0a58 from master:
Adding support for non-sticky sessions (merged/rebased nonsticky-sessions branch in commit 390b1903). For non-sticky sessions
- the session is loaded from memcached when requested by the application and stored in the local session map for this request
- it's saved back in memcached (following the same optimizations for skipping the update as sticky sessions) at the end of the request (primary memcached)
- the session is stored in an additional (secondary) memcached node to prevent a single point of failure (the node is the next from the configured list of memcached nodes) (issue #72, SPOF)
- when the primary memcached node is not available the session is loaded from the backup/secondary node and it's relocated to a new node (session relocation as for sticky sessions on memcached failover) (issue #72, SPOF)
- to allow skipping of updates (including expensive serialization) the session is stored with the double expiration time in memcached. The actual last access time (and maxInactiveInterval) is stored in a really small key/value which is used to determine if a session is still valid. This validity info is also stored for backup in the secondary memcached node. (issue #74)
- there are session lock mechanisms implemented: all (when a session is loaded as requested by the application it's locked until the end of the request/storage in memcached), auto (requests that access the session readonly are auto detected and for further requests locking is skipped, for requests that modify the session a lock is aquired. the key is the requestURI+queryString), uriPattern (a regular expression is compared with the requestURI+queryString and the session is locked if they match), none (no locking at all, default) (issue #71)
- tests are added for non-sticky functionality, others are extended to check both sticky and non-sticky mode where appropriate
- push version to 1.4.0-SNAPSHOT
- additional configuration attributes: sticky (true/false, 